Bug 845636 - WebGL uniform1i should generate INVALID_VALUE for invalid texture units - r=bjacob