content/canvas/src/WebGLContext.h
@@ -764,6 +764,9 @@ public:
     bool ValidateUniformSetter(const char* name, WebGLUniformLocation *location_object, GLint& location);
     void ValidateProgram(WebGLProgram *prog);
     bool ValidateUniformLocation(const char* info, WebGLUniformLocation *location_object);
+    bool ValidateSamplerUniformSetter(const char* info,
+                                    WebGLUniformLocation *location,
+                                    WebGLint value);
 
     void VertexAttrib1f(WebGLuint index, WebGLfloat x0);
     void VertexAttrib2f(WebGLuint index, WebGLfloat x0, WebGLfloat x1);
